--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <header>
         <h1>Meu Site</h1>
         <h2>alteração</h2>
+        
+        <h2>alteração</h2>
     </header>
     <nav>
         <ul>
